Fix video panel

--- a/app/element/iconset/iconset.html
+++ b/app/element/iconset/iconset.html
@@ -32,16 +32,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <path d="M13 13v8h8v-8h-8zM3 21h8v-8H3v8zM3 3v8h8V3H3zm13.66-1.31L11 7.34 16.66 13l5.66-5.66-5.66-5.65z"/>
             </g>
             <g id="resource" width="24" height="24" viewBox="0 0 24 24">
-                <path xmlns="http://www.w3.org/2000/svg" d="M15,7H20.5L15,1.5V7M8,0H16L22,6V18A2,2 0 0,1 20,20H8C6.89,20 6,19.1 6,18V2A2,2 0 0,1 8,0M4,4V22H20V24H4A2,2 0 0,1 2,22V4H4Z"/>
+                <path xmlns="http://www.w3.org/2000/svg"
+                      d="M15,7H20.5L15,1.5V7M8,0H16L22,6V18A2,2 0 0,1 20,20H8C6.89,20 6,19.1 6,18V2A2,2 0 0,1 8,0M4,4V22H20V24H4A2,2 0 0,1 2,22V4H4Z"/>
             </g>
             <g id="timeslot" width="24" height="24" viewBox="0 0 24 24">
-                <path xmlns="http://www.w3.org/2000/svg" d="M2,2H4V20H22V22H2V2M7,10H17V13H7V10M11,15H21V18H11V15M6,4H22V8H20V6H8V8H6V4Z"/>
+                <path xmlns="http://www.w3.org/2000/svg"
+                      d="M2,2H4V20H22V22H2V2M7,10H17V13H7V10M11,15H21V18H11V15M6,4H22V8H20V6H8V8H6V4Z"/>
             </g>
             <g id="playlist" width="24" height="24" viewBox="0 0 24 24">
-                <path xmlns="http://www.w3.org/2000/svg" d="M19,9H2V11H19V9M19,5H2V7H19V5M2,15H15V13H2V15M17,13V19L22,16L17,13Z"/>
+                <path xmlns="http://www.w3.org/2000/svg"
+                      d="M19,9H2V11H19V9M19,5H2V7H19V5M2,15H15V13H2V15M17,13V19L22,16L17,13Z"/>
             </g>
-            <g id="video-panel"  width="24pt" height="23pt" viewBox="0 0 24 24">
-                <path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm2 4v-2H3c0 1.1.89 2 2 2zM3 9h2V7H3v2zm12 12h2v-2h-2v2zm4-18H9c-1.11 0-2 .9-2 2v10c0 1.1.89 2 2 2h10c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 12H9V5h10v10zm-8 6h2v-2h-2v2zm-4 0h2v-2H7v2z"/>            </g>
+            <g id="video-panel" width="24pt" height="23pt" viewBox="0 0 24 24">
+                <path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm2 4v-2H3c0 1.1.89 2 2 2zM3 9h2V7H3v2zm12 12h2v-2h-2v2zm4-18H9c-1.11 0-2 .9-2 2v10c0 1.1.89 2 2 2h10c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 12H9V5h10v10zm-8 6h2v-2h-2v2zm-4 0h2v-2H7v2z"/>
+            </g>
             <g id="world" width="24" height="24" viewBox="0 0 24 24">
                 <path d="M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"/>
             </g>
@@ -64,19 +68,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"/>
             </g>
             <g id="devices" width="24" height="24" viewBox="0 0 24 24">
-                <path d="M0 0h24v24H0z" fill="none"/><path d="M4 6h18V4H4c-1.1 0-2 .9-2 2v11H0v3h14v-3H4V6zm19 2h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z"/>
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M4 6h18V4H4c-1.1 0-2 .9-2 2v11H0v3h14v-3H4V6zm19 2h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z"/>
             </g>
             <g id="timer" width="24" height="24" viewBox="0 0 24 24">
                 <path d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/>
             </g>
-            <g id="soccer" width="24" height="24" viewBox="0 0 24 24">
-                <path fill="none" d="M0 0h24v24H0V0z"/><circle cx="12" cy="12" r="8"/>
-            </g>
+            <g id="soccer"  fill-rule="evenodd" stroke="none" width="24" height="24" viewBox="0 0 30 30"><g fill="#929292" id="icon-6-soccer-ball"><path d="M8.81549973,14.5511943 L5.01103079,17.0082671 C5.1100006,19.2839188 5.87031523,21.3879864 7.1045629,23.1330581 L11.149279,22.910884 L11.149279,22.910884 L13.613538,20.3590691 L12.361918,16.0565595 L8.81549973,14.5511943 L8.81549973,14.5511943 Z M8.904262,13.5025113 L7.36260017,9.51633207 L7.36260017,9.51633207 C8.66528097,7.8144886 10.4326582,6.48718902 12.475186,5.72397927 L16,8.5930221 L16,8.5930221 L16,12.4069779 L12.6833059,15.1066203 L8.904262,13.5025113 L8.904262,13.5025113 Z M12.1221299,23.343024 L13.2325345,27.5291853 L13.2325345,27.5291853 C14.2682644,27.8355535 15.3649279,28 16.5,28 C17.6350721,28 18.7317356,27.8355535 19.7674655,27.5291853 L20.8535823,23.4345878 L20.8535823,23.4345878 L18.5025282,21 L14.3847619,21 L12.1221299,23.343024 L12.1221299,23.343024 L12.1221299,23.343024 Z M21.7316974,22.9043461 L25.8954371,23.1330581 C27.1296848,21.3879864 27.8899994,19.2839188 27.9889692,17.0082671 L24.1502985,14.5291055 L24.1502985,14.5291055 L20.6502313,16.0147959 L19.3603693,20.448764 L21.7316974,22.9043461 L21.7316974,22.9043461 L21.7316974,22.9043461 Z M24.1126764,13.4587148 L25.6373998,9.51633207 L25.6373998,9.51633207 C24.334719,7.8144886 22.5673418,6.48718902 20.524814,5.72397927 L20.524814,5.72397927 L17,8.5930221 L17,12.4069779 L20.2871352,15.0825607 L24.1126764,13.4587148 L24.1126764,13.4587148 L24.1126764,13.4587148 Z M16.5,29 C23.4035597,29 29,23.4035597 29,16.5 C29,9.59644029 23.4035597,4 16.5,4 C9.59644029,4 4,9.59644029 4,16.5 C4,23.4035597 9.59644029,29 16.5,29 L16.5,29 Z" id="soccer-ball"/></g></g>
             <g id="more" width="24" height="24" viewBox="0 0 24 24">
-                <path d="M0 0h24v24H0z" fill="none"/><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
             </g>
             <g id="backup" width="24" height="24" viewBox="0 0 24 24">
-                <path d="M0 0h24v24H0z" fill="none"/><path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"/>
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"/>
             </g>
             <g id="restore" width="24" height="24" viewBox="0 0 24 24">
                 <path d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"/>
@@ -95,3 +100,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </defs>
     </svg>
 </iron-iconset-svg>
+
