--- a/app/module/timeline/element/iconset/iconset.html
+++ b/app/module/timeline/element/iconset/iconset.html
@@ -18,6 +18,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <g id="monitor" width="24" height="24" viewBox="0 0 24 24" >
         <path d="M4 6h18V4H4c-1.1 0-2 .9-2 2v11H0v3h14v-3H4V6zm19 2h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z"/>
       </g>
+      <g id="list" width="24" height="24" viewBox="0 0 24 24" >
+        <  <path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"/><path d="M0 0h24v24H0z" fill="none"/>
+      </g>
     </defs>
   </svg>
 </iron-iconset-svg>
