--- a/app/module/timeline/element/timeline/timeline.html
+++ b/app/module/timeline/element/timeline/timeline.html
@@ -1,4 +1,3 @@
-
 <link rel="import" href="../../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../../../bower_components/iron-flex-layout/iron-flex-layout.html">
@@ -11,85 +10,278 @@
 
 
 <dom-module id="timeline-wc">
-  <template>
-    <style include="global-layout"></style>
-    <style include="global-style"></style>
-    <style>
+    <template>
+        <style include="global-layout"></style>
+        <style include="global-style"></style>
+        <style>
 
-      .card-content {
-        padding: 0;
-      }
+            .card-content {
+                padding: 0;
+            }
 
-      .data {
-        padding: 8px;
-      }
+            .data {
+                padding: 8px;
+            }
 
-      .activePaperButton {
-        color: var(--app-primary-color);
-      }
+            .activePaperButton {
+                color: var(--app-primary-color);
+            }
 
-      paper-listbox {
-        min-width: 0;
-      }
+            paper-listbox {
+                min-width: 0;
+            }
 
-      .dataWrapper {
-        margin: 6px;
-      }
+            .dataWrapper {
+                margin: 6px;
+            }
 
-      #rightSection {
-        background-image: url("img/bg.jpg") !important;
-        border-right: 1px solid #e8e8e8;
-        box-sizing: border-box;
-      }
+            #rightSection {
+                background-image: url("img/bg.jpg") !important;
+                border-right: 1px solid #e8e8e8;
+                box-sizing: border-box;
+            }
 
-    </style>
-    <paper-card id="design">
-      <div class="card-content flex flex-horizontal">
-        <div class="data flex-basis-85 flex flex-vertical">
-          <div class="dataWrapper">
-            <div>{{timeline.name}}</div>
-          </div>
-        </div>
-        <div class="flex-basis-15 flex flex-vertical">
-          <paper-menu-button ignore-select disabled="{{hideCrud}}">
-            <paper-icon-button icon="app:more" slot="dropdown-trigger" alt="multi menu"></paper-icon-button>
-            <paper-listbox slot="dropdown-content" multi>
-              <paper-item on-click="_update">Modifica</paper-item>
-              <paper-item  on-click="_remove">Elimina</paper-item>
-            </paper-listbox>
-          </paper-menu-button>
-        </div>
-      </div>
-      <div class="card-actions"></div>
-      <div id="rightSection" class="rate-image"></div>
-    </paper-card>
-  </template>
+            .card-setting  paper-icon-button  {
+                color: var(--app-primary-color);
+            }
 
-  <script>
-    class ElementTimeline extends Polymer.Element {
+            paper-icon-button[disabled] {
+                background-color: var(--disabled-text-color);
+                opacity: 0.5;
+            }
 
-      static get is() { return 'timeline-wc'; }
+            .card-setting paper-icon-button[disabled] {
+                background-color: transparent;
+                color: var(--disabled-text-color) !important;
+                opacity: 0.5;
+            }
 
-      static get properties() {
-          return {
+        </style>
+        <paper-card id="design" class="setting">
+            <div class="card-setting">
+                <paper-icon-button id="overlayIcon" item="{{timeline}}" on-tap="_tapContext"></paper-icon-button>
+                <paper-icon-button id="rotationIcon" item="{{timeline}}" on-tap="_tapRotation"></paper-icon-button>
+            </div>
+            <div class="card-content flex flex-horizontal">
+                <div class="data flex-basis-85 flex flex-vertical">
+                    <div class="dataWrapper">
+                        <div>{{timeline.name}}</div>
+                        <div>{{timer}} / {{total}}</div>
+                    </div>
+                </div>
+                <div class="flex-basis-15 flex flex-vertical">
+                    <paper-menu-button ignore-select disabled="{{hideCrud}}">
+                        <paper-icon-button icon="app:more" slot="dropdown-trigger" alt="multi menu"></paper-icon-button>
+                        <paper-listbox slot="dropdown-content" multi>
+                            <paper-item on-click="_update">Modifica</paper-item>
+                            <paper-item on-click="_remove">Elimina</paper-item>
+                        </paper-listbox>
+                    </paper-menu-button>
+                </div>
+            </div>
+            <div class="card-actions">
+                <paper-icon-button id="play" icon="timeslot:play" on-click="_play" class="circle-small action" title="Play"></paper-icon-button>
+                <paper-icon-button id="stop" icon="timeslot:stop" on-click="_stop" class="circle-small action" title="Stop"></paper-icon-button>
+                <paper-icon-button id="pause" icon="timeslot:pause" on-click="_pause" class="circle-small action" title="Pause"></paper-icon-button>
+            </div>
+            <div id="rightSection" class="rate-image"></div>
+        </paper-card>
+    </template>
 
-              timeline: {
-                  type: Object,
-                  value: new Timeline()
-              }
-          };
-      }
+    <script>
+        class ElementTimeline extends Polymer.Element {
 
-      _remove(evt) {
-          this.dispatchEvent(new CustomEvent('remove', {detail: this.timeline}));
-      }
+            static get is() {
+                return 'timeline-wc';
+            }
 
-      _update(evt) {
-          this.dispatchEvent(new CustomEvent('update-view', {detail: this.timeline}));
-      }
-    }
+            static get LIST_ROTATION_LABEL_ICON() {
+                let obj = {};
+                obj[Timeslot.ROTATION_NO] = 'Send timeline in NO loop mode';
+                obj[Timeslot.ROTATION_LOOP] = 'Send timeline in loop mode';
+                return obj;
+            }
 
-    window.customElements.define(ElementTimeline.is, ElementTimeline);
 
-  </script>
+            static get LIST_CONTEXT_LABEL_ICON() {
+                let obj = {};
+                obj[Timeslot.CONTEXT_OVERLAY] = 'Send timeline in overlay mode';
+                obj[Timeslot.CONTEXT_STANDARD] = 'Send timeline in standard mode';
+                return obj;
+            }
+
+            static get properties() {
+                return {
+
+                    timeline: {
+                        type: Object,
+                        notify: true,
+                        value: new Timeline(),
+                        observer: '_timelineChanged'
+                    }
+                };
+            }
+
+            ready() {
+                super.ready();
+
+                serviceManager.get('StoragePluginManager')
+                    .get(TimelineConfig.NAME_SERVICE)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._updateFromStorage.bind(this));
+            };
+
+            /**
+             * @param evt
+             */
+            _updateFromStorage(evt) {
+                if (evt.data.id === this.timeline.id) {
+                    console.log('SONO IO', evt, this);
+                    this.timeline = null;
+                    this.timeline = evt.data;
+                }
+            }
+
+            /**
+             * @param {Timeline} timeline
+             */
+            _timelineChanged(timeline) {
+                if (!timeline) {
+                    return;
+                }
+
+                this._updateContextHtml();
+                this._updateRotationHtml();
+                this._updateTimer();
+                this._updateActionHtml();
+            }
+
+            /**
+             *
+             * @param evt
+             * @private
+             */
+            _remove(evt) {
+                this.dispatchEvent(new CustomEvent('remove', {detail: this.timeline}));
+            }
+
+            /**
+             * @param evt
+             * @private
+             */
+            _update(evt) {
+                this.dispatchEvent(new CustomEvent('update-view', {detail: this.timeline}));
+            }
+
+            /**
+             * @param evt
+             * @private
+             */
+            _tapContext(evt) {
+                this.timeline.context = this.timeline.context === Timeslot.CONTEXT_STANDARD ? Timeslot.CONTEXT_OVERLAY : Timeslot.CONTEXT_STANDARD;
+                this.dispatchEvent(new CustomEvent('change-context', {detail: this.timeline}));
+                this._updateContextHtml();
+            }
+
+            /**
+             * @param evt
+             * @private
+             */
+            _tapRotation(evt) {
+                this.timeline.rotation = this.timeline.rotation === Timeslot.ROTATION_LOOP ? Timeslot.ROTATION_NO : Timeslot.ROTATION_LOOP;
+                this.dispatchEvent(new CustomEvent('change-rotation', {detail: this.timeline}));
+                this._updateRotationHtml();
+            }
+
+            /**
+             * @private
+             */
+            _updateRotationHtml() {
+                this.$.rotationIcon.setAttribute('title', ElementTimeline.LIST_ROTATION_LABEL_ICON[this.timeline.rotation]);
+                this.$.rotationIcon.icon = `timeslot:${this.timeline.rotation}`;
+            }
+
+            /**
+             * @private
+             */
+            _updateContextHtml() {
+                this.$.rotationIcon.setAttribute('title', ElementTimeline.LIST_CONTEXT_LABEL_ICON[this.timeline.context]);
+                this.$.overlayIcon.icon = `timeslot:${this.timeline.context}`;
+            }
+
+            /**
+             * @private
+             */
+            _updateActionHtml() {
+                switch (true) {
+                    case this.timeline.status === Timeslot.RUNNING:
+                        this.hideCrud = true;
+                        this.$.overlayIcon.disabled = true;
+                        this.$.rotationIcon.disabled = true;
+
+                        this.$.play.disabled = true;
+                        this.$.stop.disabled = false;
+                        this.$.pause.disabled =false;
+                        break;
+                    case  this.timeline.status === Timeslot.PAUSE:
+
+                        this.hideCrud = false;
+                        this.$.overlayIcon.disabled = false;
+                        this.$.rotationIcon.disabled = false;
+
+                        this.$.play.disabled = false;
+                        this.$.stop.disabled = false;
+                        this.$.pause.disabled = true;
+                        break;
+                    default:
+                        this.hideCrud = false;
+                        this.$.overlayIcon.disabled = false;
+                        this.$.rotationIcon.disabled = false;
+
+                        this.$.play.disabled = false;
+                        this.$.stop.disabled = true;
+                        this.$.pause.disabled = true;
+                }
+            }
+
+            /**
+             * @private
+             */
+            _updateTimer() {
+                if (!this.timeline) {
+                    return;
+                }
+
+                this.timer = this.timeline.timer.toString();
+                this.total = this.timeline.time.toString();
+            }
+
+            /**
+             * @private
+             */
+            _play(evt) {
+                if (this.timeline.status === Timeslot.IDLE) {
+                    this.dispatchEvent(new CustomEvent('play', {detail: this.timeline}));
+                } else {
+                    this.dispatchEvent(new CustomEvent('resume', {detail: this.timeline}));
+                }
+            }
+
+            /**
+             * @private
+             */
+            _stop(evt) {
+                this.dispatchEvent(new CustomEvent('stop', {detail: this.timeline}));
+            }
+
+            /**
+             * @private
+             */
+            _pause(evt) {
+                this.dispatchEvent(new CustomEvent('pause', {detail: this.timeline}));
+            }
+        }
+
+        window.customElements.define(ElementTimeline.is, ElementTimeline);
+
+    </script>
 </dom-module>
