Add storage adaper elements

--- a/app/module/soccer/element/scoreboard/scoreboard-player.html
+++ b/app/module/soccer/element/scoreboard/scoreboard-player.html
@@ -22,6 +22,10 @@
         <style include="global-style"></style>
         <style>
 
+            paper-card {
+                margin-bottom: 4px;
+            }
+
             .card-content,
             .card-actions {
                 padding: 0;
@@ -162,7 +166,7 @@
             }
 
         </style>
-        <paper-card id="design">
+        <paper-card>
             <div id="card-container" class="card-content flex flex-horizontal">
                 <div id="player-data" class="data flex-basis-85 flex">
                     <div id="metadata" class="dataWrapper flex flex-horizontal">
